[Add] Atmosphere Collector

--- a/src/main/resources/assets/gtma/lang/ja_jp.json
+++ b/src/main/resources/assets/gtma/lang/ja_jp.json
@@ -5,6 +5,8 @@
   "block.gtma.americium_gearbox_casing": "アメリシウム製ギアボックス外装",
   "block.gtma.americium_pipe_casing": "アメリシウム製パイプ外装",
   "block.gtma.americium_plated_factory_casing": "アメリシウムメッキファクトリー外装",
+  "block.gtma.atmosphere_collector": "大気収集機",
+  "block.gtma.dust_proof_tribaloy_casing": "トリバロイ製防塵外装",
   "block.gtma.industrial_ore_processing_factory": "工業用鉱石処理ファクトリー",
   "block.gtma.invar_multiblock_tank": "インバー製マルチブロックタンク",
   "block.gtma.invar_tank_valve": "インバー製タンクバルブ",
@@ -25,6 +27,7 @@
   "block.gtma.tungstensteel_multiblock_tank": "タングステンスチール製マルチブロックタンク",
   "block.gtma.tungstensteel_tank_valve": "タングステンスチール製タンクバルブ",
   "block.gtma.tungstensteel_tank_wall": "タングステンスチール製タンク壁",
+  "gtceu.atmosphere_collector": "大気収集機",
   "gtceu.ore_factory": "鉱石処理ファクトリー",
   "block.gtma.stainless_steel_multiblock_tank": "ステンレススチール製マルチブロックタンク",
   "block.gtma.stainless_steel_tank_valve": "ステンレススチール製タンクバルブ",
